// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > Snapshot Tests > matches snapshot for default empty state 1`] = `
<div>
  <div
    class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10"
  >
    <div
      class="p-12 text-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-inbox w-16 h-16 text-slate-500 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h3
        class="text-lg font-semibold text-white mb-2"
      >
        暂无数据
      </h3>
    </div>
  </div>
</div>
`;

exports[`EmptyState > Snapshot Tests > matches snapshot with all props 1`] = `
<div>
  <div
    class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 my-4"
  >
    <div
      class="p-12 text-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-database w-16 h-16 text-slate-500 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <ellipse
          cx="12"
          cy="5"
          rx="9"
          ry="3"
        />
        <path
          d="M3 5V19A9 3 0 0 0 21 19V5"
        />
        <path
          d="M3 12A9 3 0 0 0 21 12"
        />
      </svg>
      <h3
        class="text-lg font-semibold text-white mb-2"
      >
        没有项目
      </h3>
      <p
        class="text-slate-400 mb-4"
      >
        开始创建您的第一个项目
      </p>
      <div
        class="mt-4"
      >
        <button>
          创建项目
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyState > Snapshot Tests > matches snapshot with description only 1`] = `
<div>
  <div
    class="rounded-2xl bg-gradient-to-br from-white/[0.05] to-white/[0.02] border border-white/10 transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10"
  >
    <div
      class="p-12 text-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-inbox w-16 h-16 text-slate-500 mx-auto mb-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h3
        class="text-lg font-semibold text-white mb-2"
      >
        空列表
      </h3>
      <p
        class="text-slate-400 mb-4"
      >
        列表中还没有任何项目
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > Snapshot Tests > matches snapshot for basic error 1`] = `
<div>
  <div
    class="rounded-2xl from-white/[0.05] to-white/[0.02] border transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 border-red-500/20 bg-red-500/5"
  >
    <div
      class="p-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert w-6 h-6 text-red-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <div
          class="flex-1"
        >
          <h3
            class="text-lg font-semibold text-red-400 mb-2"
          >
            加载失败
          </h3>
          <p
            class="text-slate-300 mb-4"
          >
            测试错误信息
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > Snapshot Tests > matches snapshot with details 1`] = `
<div>
  <div
    class="rounded-2xl from-white/[0.05] to-white/[0.02] border transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 border-red-500/20 bg-red-500/5"
  >
    <div
      class="p-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert w-6 h-6 text-red-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <div
          class="flex-1"
        >
          <h3
            class="text-lg font-semibold text-red-400 mb-2"
          >
            加载失败
          </h3>
          <p
            class="text-slate-300 mb-4"
          >
            服务器错误
          </p>
          <details
            class="mb-4"
          >
            <summary
              class="text-sm text-slate-500 cursor-pointer mb-2"
            >
              详细信息
            </summary>
            <pre
              class="text-xs text-slate-500 bg-slate-900 p-3 rounded overflow-auto"
            >
              {
  "detail": "内部错误",
  "code": 500
}
            </pre>
          </details>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage > Snapshot Tests > matches snapshot with retry button 1`] = `
<div>
  <div
    class="rounded-2xl from-white/[0.05] to-white/[0.02] border transition-all duration-300 hover:border-white/20 hover:shadow-lg hover:shadow-violet-500/10 border-red-500/20 bg-red-500/5"
  >
    <div
      class="p-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert w-6 h-6 text-red-400 flex-shrink-0 mt-0.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <div
          class="flex-1"
        >
          <h3
            class="text-lg font-semibold text-red-400 mb-2"
          >
            加载失败
          </h3>
          <p
            class="text-slate-300 mb-4"
          >
            网络错误
          </p>
          <button
            class="inline-flex items-center justify-center font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 border border-white/20 text-white bg-transparent hover:bg-white/[0.05] hover:border-primary/50 h-8 px-3 text-xs gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
            重试
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
